It compiles with even with -Werror (not using -Wall).

--- a/compile/Makefile
+++ b/compile/Makefile
@@ -3,7 +3,8 @@
 #
 
 INCLUDE = -I../h
-CFLAGS	= -march=i586 -fno-builtin -c -Wall -O ${DEFS} ${INCLUDE}
+#CFLAGS	= -march=i586 -fno-builtin -c -Wall -O ${DEFS} ${INCLUDE}
+CFLAGS	= -march=i586 -fno-builtin -c -Werror -O ${DEFS} ${INCLUDE}
 SDEFS	= -I../h
 
 CC      =       /usr/bin/gcc
